2010-10-05 0.75 - H.Merijn Brand   <h.m.brand@xs4all.nl>
    * Fixed undefinedness of $\ in print (RT#61880)

2010-09-29 0.74 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Spelling fixes
    * Real eol support for parsing streams (beyond \n, \r and \r\n)
    * Clarify doc for always_quote to not quote undef fields
    * Clarify UTF8 process for print () and combine ()

2010-05-03 0.73 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Improve date conversion in examples/csv2xls
      new option -D allows column selection for date conversions
    * Tested under perl-5.12.0 (and 21 other versions of perl)
    * Added a note about EBCDIC data files
    * Test suite is now safe for parallel test (prove --shuffle -j6)

2010-03-16 0.72 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Introduce quote_null attribute (RT#55200)
    * examples/csv-check can be used for Text::CSV_PP
    * examples/csv-check more options for sep_, escape_ and quote_char
    * examples/csv2xls more options for sep_, escape_ and quote_char
    * examples/csv2xls added auto_diag and verbosity
    * Dropped YAML spec to 1.0

2010-02-15 0.71 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Upped copyright to 2010
    * Prevent double encoding: make Text::CSV_XS streams behave just
      like perl would (thanks ikegami for the test cases)
    * Text::CSV_XS->error_diag () in void context now warns instead of
      doing nothing
    * auto_diag also used for new () itself

2009-12-02 0.70 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Add quote_space attribute
    * Forbid \r and \n in sep_char, quote_char, and escape_char

2009-10-10 0.69 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Missing end quotes in error code docs
    * examples/csv-check now shows detected eol
    * Auto detection of eol => "\r" in streams
    * Optimized caching. All cache changes now in XS

2009-10-04 0.68 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Attribute auto_diag now localizes to +1 if autodie is active